<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StarKisan</string>
    <string name="commodity_name">Commodity</string>
    <string name="input_rate">Rate (Weight/Kg)</string>
    <string name="input_remarks">Remarks</string>
    <string name="label_spinner_grade">Grade</string>
    <string name="label_spinner_mandi">Source</string>
    <string name="title_activity_commodity_entry">CommodityEntryActivity</string>
    <string name="title_activity_export">ExportActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_photo_picker">PhotoPickerActivity</string>
    <string name="title_activity_photo_view">PhotoViewActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="ui_photo_picker_title">Photo Picker Dialog</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="first_fragment_label">Start Fragment</string>
    <string name="second_fragment_label">History Fragment</string>


</resources>