<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:ls="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.farbod.labelledspinner.LabelledSpinner android:id="@id/spinnerMandi" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginHorizontal="20.0dip" ls:labelText="@string/label_spinner_mandi" ls:layout_constraintStart_toStartOf="parent" ls:layout_constraintTop_toTopOf="parent" />
        <com.farbod.labelledspinner.LabelledSpinner android:id="@id/spinnerCommodity" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="100.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" ls:labelText="@string/commodity_name" ls:layout_constraintStart_toStartOf="@id/spinnerMandi" ls:layout_constraintTop_toTopOf="@id/spinnerMandi" />
        <com.farbod.labelledspinner.LabelledSpinner android:id="@id/spinnerGrade" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="200.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" ls:labelText="@string/label_spinner_grade" ls:layout_constraintStart_toStartOf="@id/spinnerMandi" ls:layout_constraintTop_toTopOf="@id/spinnerMandi" />
        <com.farbod.labelledspinner.LabelledSpinner android:id="@id/spinnerSeller" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="300.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" ls:labelText="Seller" ls:layout_constraintStart_toStartOf="@id/spinnerMandi" ls:layout_constraintTop_toTopOf="@id/spinnerMandi" />
        <com.google.android.material.textfield.TextInputEditText android:id="@id/input_rate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="400.0dip" android:hint="@string/input_rate" android:inputType="numberDecimal" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" ls:layout_constraintStart_toStartOf="@id/spinnerMandi" ls:layout_constraintTop_toTopOf="@id/spinnerMandi" />
        <com.google.android.material.textfield.TextInputEditText android:id="@id/input_remarks" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="460.0dip" android:hint="@string/input_remarks" android:inputType="text" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" ls:layout_constraintStart_toStartOf="@id/spinnerMandi" ls:layout_constraintTop_toTopOf="@id/spinnerMandi" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@id/playBtn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:tint="@color/white" android:layout_marginEnd="20.0dip" ls:layout_constraintEnd_toEndOf="parent" ls:layout_constraintHorizontal_bias="1.0" ls:layout_constraintTop_toTopOf="@id/start_upload_photo_btn" ls:layout_constraintVertical_bias="1.0" ls:srcCompat="@drawable/ic_add_black_24dp" />
        <Button android:textColor="@color/white" android:id="@id/start_upload_photo_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="60.0dip" android:text="Upload Image" android:backgroundTint="@color/colorAccent" android:layout_marginHorizontal="20.0dip" ls:layout_constraintStart_toStartOf="@id/input_remarks" ls:layout_constraintTop_toTopOf="@id/input_remarks" />
        <ImageView android:id="@id/imageview" android:layout_width="150.0dip" android:layout_height="150.0dip" android:layout_marginTop="100.0dip" android:layout_marginStart="20.0dip" ls:layout_constraintStart_toStartOf="parent" ls:layout_constraintTop_toTopOf="@id/start_upload_photo_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>